<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no">ទេ</string>
    <string name="khr">KHR</string>
    <string name="usd">USD</string>
    <string name="aba">ABA</string>
    <string name="light">ភ្លឺ</string>
    <string name="add">បន្ថែម</string>
    <string name="no_en">No.</string>
    <string name="no_km">ល.រ</string>
    <string name="dark">ងងឹត</string>
    <string name="wing">Wing</string>
    <string name="edit">កែប្រែ</string>
    <string name="done">រួចរាល់</string>
    <string name="delete">លុប</string>
    <string name="qty_en">Qty</string>
    <string name="save">រក្សាទុក</string>
    <string name="qty_km">ចំនួន</string>
    <string name="yes">បាទ/ចាស</string>
    <string name="cash">សាច់ប្រាក់</string>
    <string name="price_km">តម្លៃ</string>
    <string name="balance">នៅខ្វះ</string>
    <string name="error">មានបញ្ហា</string>
    <string name="cancel">បោះបង់</string>
    <string name="acleda">ACLEDA</string>
    <string name="goods_en">Goods</string>
    <string name="price_en">Price</string>
    <string name="payment">បង់ប្រាក់</string>
    <string name="invoice">វិក្កយបត្រ</string>
    <string name="paid">បានបង់រួចរាល់</string>
    <string name="goods_km">មុខទំនិញ</string>
    <string name="customer">អតិថិជន</string>
    <string name="app_name">KotBung</string>
    <string name="amount_en">Amount</string>
    <string name="amount_due">ត្រូវបង់</string>
    <string name="address">អាស័យដ្ឋាន</string>
    <string name="amount_km">តម្លៃសរុប</string>
    <string name="unpaid">មិនទាន់បង់រួច</string>
    <string name="total_due">ត្រូវបង់សរុប</string>
    <string name="over_payment">បង់លើស</string>
    <string name="qty_required">ចំនួន **</string>
    <string name="unit_required">ខ្នាត **</string>
    <string name="phone_number">លេខទូរស័ព្ទ</string>
    <string name="delivery_fee">ថ្លៃដឹកជញ្ជូន</string>
    <string name="send_invoice">ផ្ញើវិក្កយបត្រ</string>
    <string name="follow_system">តាមប្រព័ន្ទ</string>
    <string name="discount">បញ្ចុះតម្លៃ ( % )</string>
    <string name="invoice_no_format">%04d</string>
    <string name="paid_required">បានបង់ **</string>
    <string name="paid_format">បានបង់ : %s</string>
    <string name="paid_type_format">( %s )</string>
    <string name="add_invoice">បន្ថែមវិក្កយបត្រ</string>
    <string name="business_name">ឈ្មោះអាជីវកម្ម</string>
    <string name="add_customer">បន្ថែមអតិថិជន</string>
    <string name="balance_format">នៅខ្វះ : %s</string>
    <string name="goods_required">មុខទំនិញ **</string>
    <string name="date_required">កាលបរិច្ឆេទ **</string>
    <string name="unpaid_format">ជំពាក់ ( %d )</string>
    <string name="invoice_detail">វិក្កយបត្រលម្អិត</string>
    <string name="payment_history">ប្រវត្តិបង់ប្រាក់</string>
    <string name="customer_required">អតិថិជន **</string>
    <string name="unit_price_required">តម្លៃរាយ **</string>
    <string name="full_name_required">ឈ្មោះពេញ **</string>
    <string name="no_data_available">មិនមានទិន្នន័យ</string>
    <string name="business_profile">ព័ត៍មានអាជីវកម្ម</string>
    <string name="total_due_format">ត្រូវបង់សរុប : %s</string>
    <string name="total_paid_format">បានបង់សរុប : %s</string>
    <string name="phone_number_required">លេខទូរស័ព្ទ **</string>
    <string name="payment_method_format">ទូទាត់តាម : %s</string>
    <string name="payment_method_required">ទូទាត់តាម **</string>
    <string name="tertiary_phone_number">លេខទូរស័ព្ទខ្សែទីបី</string>
    <string name="primary_phone_number">លេខទូរស័ព្ទខ្សែទីមួយ</string>
    <string name="secondary_phone_number">លេខទូរស័ព្ទខ្សែទីពីរ</string>
    <string name="delete_message">តើអ្នកច្បាស់ហើយថាអ្នកនឹងលុប?</string>
    <string name="date_km_en_format">កាលបរិច្ឆេទ / Date : %s</string>
    <string name="payment_date_required">កាលបរិច្ឆេទបង់ប្រាក់ **</string>
    <string name="balance_km_en_format">នៅខ្វះ / Balance : %s</string>
    <string name="address_en_km_format">អាស័យដ្ឋាន / Address : %s</string>
    <string name="sub_total_km_en_format">សរុប / Sub Total  : %s</string>
    <string name="customer_km_en_format">អតិថិជន / Customer : %s</string>
    <string name="search_by_customer_name">ស្វែងរកតាមរយៈឈ្មោះអតិថិជន</string>
    <string name="invoice_no_km_en_format">វិក្កយបត្រ / Invoice : %04d</string>
    <string name="total_due_km_en_format">ត្រូវបង់សរុប / Total Due : %s</string>
    <string name="goods_already_exist_message">មុខទំនិញ (%s) មានរួចហើយ</string>
    <string name="phone_already_exist_message">លេខទូរស័ព្ទ (%s) មានរួចហើយ</string>
    <string name="total_paid_km_en_format">បានបង់សរុប / Total Paid : %s</string>
    <string name="discount_km_en_format">បញ្ចុះតម្លៃ / Discount (%d%%) : %s</string>
    <string name="phone_number_km_en_format">លេខទូរស័ព្ទ / Phone Number : %s</string>
    <string name="delivery_fee_km_en_format">ថ្លៃដឹកជញ្ជូន / Delivery Fee : %s</string>
</resources>