<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gains_boro_or_dark"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.ThemeActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtb"
        android:paddingTop="30dp"
        app:titleMarginTop="15dp"
        app:title="@string/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/black_or_white"
        android:background="@color/white_or_black"
        app:navigationIcon="@drawable/ic_arrow_back"/>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_or_black">

        <RadioGroup
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:textSize="15sp"
                android:id="@+id/rbLight"
                android:text="@string/light"
                app:buttonTint="@color/grey"
                android:layout_height="30dp"
                android:layout_width="wrap_content" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:textSize="15sp"
                android:id="@+id/rbDark"
                android:text="@string/dark"
                app:buttonTint="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:textSize="15sp"
                app:buttonTint="@color/grey"
                android:layout_height="30dp"
                android:id="@+id/rbFollowSystem"
                android:layout_width="wrap_content"
                android:text="@string/follow_system"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="5dp"
            android:id="@+id/mbtSave"
            android:text="@string/save"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textColor="@color/white_or_black"
            android:backgroundTint="@color/black_or_white"/>
    </LinearLayout>
</LinearLayout>