<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_black"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.BusinessProfileActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtb"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/business_profile"
        app:titleTextColor="@color/black_white"
        app:navigationIcon="@drawable/ic_arrow_back"/>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/black_white"/>

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_name"
            android:textColor="@color/black_white" />

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="15sp"
            android:inputType="text"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/etBusinessName"
            android:layout_width="match_parent"
            android:textCursorDrawable="@drawable/cursor_color"
            android:background="@drawable/bg_radius_5_stroke_2"/>

        <LinearLayout
            android:gravity="bottom"
            android:layout_marginTop="15dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"
                    android:text="@string/primary_phone_number"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:inputType="phone"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:id="@+id/etPrimaryPhoneNumber"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@drawable/bg_radius_5_stroke_2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"
                    android:text="@string/secondary_phone_number"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:inputType="phone"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:id="@+id/etSecondaryPhoneNumber"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@drawable/bg_radius_5_stroke_2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"
                    android:text="@string/tertiary_phone_number"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:inputType="phone"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:id="@+id/etTertiaryPhoneNumber"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@drawable/bg_radius_5_stroke_2"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:textSize="15sp"
            android:text="@string/address"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_white" />

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="15sp"
            android:id="@+id/etAddress"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="15dp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:textCursorDrawable="@drawable/cursor_color"
            android:background="@drawable/bg_radius_5_stroke_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSave"
            android:text="@string/save"
            app:iconGravity="textStart"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            app:icon="@drawable/ic_save_alt"
            app:iconTint="@color/white_black"
            android:layout_width="match_parent"
            android:textColor="@color/white_black"
            android:backgroundTint="@color/black_white" />
    </LinearLayout>
</LinearLayout>