<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_light_black"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.customer.fragment.CustomerListDialogFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtb"
        app:title="@string/customer"
        app:menu="@menu/close_toolbar_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/black_white"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:textSize="15sp"
        android:inputType="text"
        android:id="@+id/etSearch"
        android:layout_height="35dp"
        android:drawablePadding="10dp"
        android:paddingHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        android:drawableStart="@drawable/ic_search"
        app:layout_constraintTop_toBottomOf="@id/mtb"
        android:hint="@string/search_by_customer_name"
        android:background="@drawable/bg_radius_5_stroke_2"/>

    <View
        android:id="@+id/dvd"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:background="@color/black_white"
        app:layout_constraintTop_toBottomOf="@id/etSearch"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:visibility="gone"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/dvd"
        app:layout_constraintBottom_toTopOf="@id/btAddCustomer"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/black_white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:visibility="gone"
        android:id="@+id/icGroups"
        android:layout_height="45dp"
        android:src="@drawable/ic_groups"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:textSize="15sp"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/tvNoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_white"
        android:text="@string/no_data_available"
        app:layout_constraintTop_toBottomOf="@id/icGroups"/>

    <com.google.android.material.button.MaterialButton
        android:layout_weight="1"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:id="@+id/btAddCustomer"
        app:iconTint="@color/white_black"
        android:text="@string/add_customer"
        android:layout_width="match_parent"
        android:textColor="@color/white_black"
        android:backgroundTint="@color/black_white"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>