<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_light_black"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.payment.fragment.AddPaymentDialogFragment">

    <LinearLayout
        android:id="@+id/div"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtb"
            app:title="@string/payment"
            app:menu="@menu/close_toolbar_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/black_white"/>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/black_white"/>

        <LinearLayout
            android:layout_margin="15dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:text="@string/amount_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white" />

                <TextView
                    android:textSize="15sp"
                    android:id="@+id/tvAmountDue"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paid_required"
                    android:textColor="@color/black_white" />

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:id="@+id/etPaid"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@drawable/bg_radius_5_stroke_2"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white" />

                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:id="@+id/tvBalance"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_marginEnd="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"
                    android:text="@string/payment_date_required"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/etPaymentDate"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_radius_5_stroke_2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"
                    android:text="@string/payment_method_required" />

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:id="@+id/etPaymentMethod"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_radius_5_stroke_2"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:alpha="0.5"
            android:enabled="false"
            android:id="@+id/btSave"
            android:text="@string/save"
            app:iconGravity="textStart"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            app:icon="@drawable/ic_save_alt"
            app:iconTint="@color/white_black"
            android:layout_width="match_parent"
            android:textColor="@color/white_black"
            android:backgroundTint="@color/black_white"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:visibility="gone"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/black_white"
        app:layout_constraintBottom_toBottomOf="parent" />
</FrameLayout>