<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_black"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.customer.ManageCustomerActivity">

    <LinearLayout
        android:id="@+id/div"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_black">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtb"
            android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/black_white"
            app:navigationIcon="@drawable/ic_arrow_back" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/black_white"/>

        <LinearLayout
            android:layout_margin="15dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_marginEnd="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"
                    android:text="@string/full_name_required"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:inputType="text"
                    android:id="@+id/etFullName"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@drawable/bg_radius_5_stroke_2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_white"
                    android:text="@string/phone_number_required"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="15sp"
                    android:inputType="phone"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/etPhoneNumber"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@drawable/bg_radius_5_stroke_2"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:textSize="15sp"
            android:id="@+id/tvAddress"
            android:text="@string/address"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_white"/>

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="15sp"
            android:id="@+id/etAddress"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:background="@drawable/bg_radius_5_stroke_2"/>

        <LinearLayout
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:alpha="0.5"
                android:enabled="false"
                android:id="@+id/btSave"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/save"
                app:iconGravity="textStart"
                android:layout_height="40dp"
                app:icon="@drawable/ic_save_alt"
                app:iconTint="@color/white_black"
                android:textColor="@color/white_black"
                android:backgroundTint="@color/black_white"/>

            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/btDelete"
                app:iconGravity="textStart"
                android:layout_height="40dp"
                android:text="@string/delete"
                app:icon="@drawable/ic_delete"
                app:iconTint="@color/white_black"
                android:layout_marginStart="15dp"
                android:textColor="@color/white_black"
                android:backgroundTint="@color/black_white"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:visibility="gone"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:indeterminateTint="@color/black_white" />
</FrameLayout>